--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -16,7 +16,7 @@ IF(win32)
     ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB BOOST_ASIO_DISABLE_STD_ATOMIC)
 ENDIF()
 
-SET(${TARGET}_SUBDIRS . crypto)
+SET(${TARGET}_SUBDIRS crypto)
 Add_Subs(${TARGET}_SUBDIRS)
 
 GET_SRCS(${TARGET}_SRCLISTS ${TARGET}_SUBDIRS)
