[Normal]compile opc

--- a/opc/CMakeLists.txt
+++ b/opc/CMakeLists.txt
@@ -15,19 +15,22 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 SET(${TARGET}_SUBDIRS .)
 
 GET_SRCS(${TARGET}_SRCLISTS ${TARGET}_SUBDIRS)
-ADD_LIBRARY(${TARGET} ${${TARGET}_SRCLISTS})
+ADD_EXECUTABLE(${TARGET} ${${TARGET}_SRCLISTS})
 TARGET_LINK_LIBRARIES(${TARGET} tbbmalloc)
 set_target_properties(${TARGET} PROPERTIES VERSION $ENV{BUILD_VERSION} SOVERSION $ENV{BUILD_VERSION})
 #set_target_properties(${TARGET} PROPERTIES COTIRE_PREFIX_HEADER_IGNORE_PATH "boost/preprocessor")
 
 #cotire(${TARGET})
 TARGET_LINK_LIBRARIES(${TARGET} common)
+TARGET_LINK_LIBRARIES(${TARGET} boost_program_options)
 TARGET_LINK_LIBRARIES(${TARGET} tcmalloc)
+TARGET_LINK_LIBRARIES(${TARGET} stdc++fs)
+TARGET_LINK_LIBRARIES(${TARGET} pthread)
 
 INSTALL(TARGETS ${TARGET}
+        RUNTIME DESTINATION lib
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib)
 
 FILE(GLOB_RECURSE ${TARGET}_HEADER_LISTS "*.h" "*.hpp")
 INSTALL_FILES(include ${TARGET}_HEADER_LISTS)
-
