--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -16,7 +16,7 @@ IF(win32)
     ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB BOOST_ASIO_DISABLE_STD_ATOMIC)
 ENDIF()
 
-SET(${TARGET}_SUBDIRS crypto)
+SET(${TARGET}_SUBDIRS crypto compress)
 Add_Subs(${TARGET}_SUBDIRS)
 
 GET_SRCS(${TARGET}_SRCLISTS ${TARGET}_SUBDIRS)
@@ -29,6 +29,7 @@ TARGET_LINK_LIBRARIES(${TARGET} boost_coroutine)
 TARGET_LINK_LIBRARIES(${TARGET} boost_context)
 TARGET_LINK_LIBRARIES(${TARGET} boost_system)
 TARGET_LINK_LIBRARIES(${TARGET} crypto)
+TARGET_LINK_LIBRARIES(${TARGET} z)
 TARGET_LINK_LIBRARIES(${TARGET} tcmalloc)
 if(win32)
     LINK_DIRECTORIES(C:\Windows\System32)
