[Normal]1. 增加cmake/linktcmalloc.cmake; 2. 调试通过MoreThan1Buf_None

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -8,7 +8,7 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Werror=uninitialized -Werror
 SET(TARGET common)
 PROJECT(${TARGET})
 INCLUDE(CollectSrcs)
-
+INCLUDE(linktcmalloc)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 
@@ -30,7 +30,8 @@ TARGET_LINK_LIBRARIES(${TARGET} boost_context)
 TARGET_LINK_LIBRARIES(${TARGET} boost_system)
 TARGET_LINK_LIBRARIES(${TARGET} crypto)
 TARGET_LINK_LIBRARIES(${TARGET} z)
-TARGET_LINK_LIBRARIES(${TARGET} tcmalloc)
+LINK_TCMALLOC(${TARGET})
+
 if(win32)
     LINK_DIRECTORIES(C:\Windows\System32)
     TARGET_LINK_LIBRARIES(${TARGET} gdi32 user32 ws2_32)
