--- a/test/serializeTest/CMakeLists.txt
+++ b/test/serializeTest/CMakeLists.txt
@@ -8,6 +8,7 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Werror=uninitialized -Werror
 SET(TARGET serializeTest)
 PROJECT(${TARGET})
 INCLUDE(CollectSrcs)
+INCLUDE(linktcmalloc)
 
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
@@ -23,7 +24,8 @@ set_target_properties(${TARGET} PROPERTIES VERSION $ENV{BUILD_VERSION} SOVERSION
 #cotire(${TARGET})
 TARGET_LINK_LIBRARIES(${TARGET} common)
 TARGET_LINK_LIBRARIES(${TARGET} boost_program_options)
-TARGET_LINK_LIBRARIES(${TARGET} tcmalloc)
+TARGET_LINK_LIBRARIES(${TARGET} boost_unit_test_framework)
+LINK_TCMALLOC(${TARGET})
 TARGET_LINK_LIBRARIES(${TARGET} stdc++fs)
 TARGET_LINK_LIBRARIES(${TARGET} pthread)
 
