[Normal]support recurive serialize

--- a/test/serializeTest/CMakeLists.txt
+++ b/test/serializeTest/CMakeLists.txt
@@ -26,7 +26,7 @@ TARGET_LINK_LIBRARIES(${TARGET} common)
 TARGET_LINK_LIBRARIES(${TARGET} boost_program_options)
 TARGET_LINK_LIBRARIES(${TARGET} boost_unit_test_framework)
 LINK_TCMALLOC(${TARGET})
-TARGET_LINK_LIBRARIES(${TARGET} stdc++fs)
+#TARGET_LINK_LIBRARIES(${TARGET} stdc++fs)
 TARGET_LINK_LIBRARIES(${TARGET} pthread)
 
 INSTALL(TARGETS ${TARGET}
