--- a/opc/CMakeLists.txt
+++ b/opc/CMakeLists.txt
@@ -25,7 +25,7 @@ set_target_properties(${TARGET} PROPERTIES VERSION $ENV{BUILD_VERSION} SOVERSION
 TARGET_LINK_LIBRARIES(${TARGET} common)
 TARGET_LINK_LIBRARIES(${TARGET} boost_program_options)
 LINK_TCMALLOC(${TARGET})
-TARGET_LINK_LIBRARIES(${TARGET} stdc++fs)
+TARGET_LINK_LIBRARIES(${TARGET} boost_filesystem)
 TARGET_LINK_LIBRARIES(${TARGET} pthread)
 
 INSTALL(TARGETS ${TARGET}
