[Normal]improve opc

--- a/opc/CMakeLists.txt
+++ b/opc/CMakeLists.txt
@@ -17,6 +17,7 @@ SET(${TARGET}_SUBDIRS .)
 
 GET_SRCS(${TARGET}_SRCLISTS ${TARGET}_SUBDIRS)
 ADD_EXECUTABLE(${TARGET} ${${TARGET}_SRCLISTS})
+TARGET_LINK_LIBRARIES(${TARGET} opp)
 TARGET_LINK_LIBRARIES(${TARGET} tbbmalloc)
 set_target_properties(${TARGET} PROPERTIES VERSION $ENV{BUILD_VERSION} SOVERSION $ENV{BUILD_VERSION})
 #set_target_properties(${TARGET} PROPERTIES COTIRE_PREFIX_HEADER_IGNORE_PATH "boost/preprocessor")
